--- a/src/event-detail/ui/booking-info-detail.directive.html
+++ b/src/event-detail/ui/booking-info-detail.directive.html
@@ -1,6 +1,6 @@
 <tr ng-class="::{muted: isEmpty(bookingInfo)}">
     <td>
-        <strong>Reservaties</strong>
+        <span class="def">Reservaties</span>
     </td>
     <td ng-if="::!isEmpty(bookingInfo)">
         <ul class="list-unstyled" >
