--- a/src/event-detail/ui/contact-point-detail.directive.html
+++ b/src/event-detail/ui/contact-point-detail.directive.html
@@ -1,6 +1,6 @@
 <tr ng-class="::{muted: isEmpty(contactPoint)}">
     <td>
-        <strong>Contact</strong>
+        <span class="def">Contact</span>
     </td>
     <td ng-if="::!isEmpty(contactPoint)">
         <ul class="list-unstyled">
