--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -10,6 +10,11 @@
   </div>
 </div>
 
+<div ng-if="!finishedLoading()">
+  <p class="title"><span class="placeholder-title"></span></p>
+  <p class="text-center"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i><span class="sr-only">Aan het laden...</span></p>
+</div>
+
 <div ng-if="finishedLoading()">
   <h1 class="title" ng-bind="event.name"></h1>
 
@@ -38,8 +43,6 @@
       </ul>
 
       <div class="tab-pane" role="tabpanel" ng-show="isTabActive('data')">
-        <h2 class="block-header">Voorbeeld</h2>
-        <div class="panel panel-default">
           <table class="table udb3-data-table">
             <colgroup>
               <col style="width:20%"/>
@@ -47,46 +50,46 @@
             </colgroup>
             <tbody>
               <tr>
-                <td><strong>Titel</strong></td>
+                <td><span class="def">Titel</span></td>
                 <td>{{event.name}}</td>
               </tr>
               <tr>
-                <td><strong>Type</strong></td>
+                <td><span class="def">Type</span></td>
                 <td>{{event.type.label}}</td>
               </tr>
               <tr ng-if="event.audience.audienceType !== 'everyone'">
-                <td><strong>Toegang</strong></td>
+                <td><span class="def">Toegang</span></td>
                 <td>{{translateAudience(event.audience.audienceType)}}
                 <udb-event-cultuurkuur-component event="event" permission="::permissions.editing" ></udb-event-cultuurkuur-component></td>
               </tr>
               <tr>
                 <td>
-                  <strong>Labels</strong>
+                  <span class="def">Labels</span>
                 </td>
                 <td>
-                  <udb-label-select labels="event.labels"
+                  <p><udb-label-select labels="event.labels"
                                     label-added="labelAdded(label)"
                                     label-removed="labelRemoved(label)">
-                  </udb-label-select>
-                  <div ng-if="labelResponse === 'error'" class="alert alert-danger">
+                  </udb-label-select></p>                  
+                  <p ng-if="labelResponse === 'error'" class="alert alert-danger">
                     Het toevoegen van het label '{{labelsError.name}}' is niet gelukt.
-                  </div>
-                  <div ng-if="labelResponse === 'success'" class="alert alert-success">
+                  </p>
+                  <p ng-if="labelResponse === 'success'" class="alert alert-success">
                     Het label '{{addedLabel}}' werd succesvol toegevoegd.
-                  </div>
-                  <div ng-if="labelResponse === 'unlabelError'" class="alert alert-danger">
+                  </p>
+                  <p ng-if="labelResponse === 'unlabelError'" class="alert alert-danger">
                     <span ng-bind="labelsError"></span>
-                  </div>
+                  </p>
                 </td>
               </tr>
               <tr>
-                <td><strong>Beschrijving</strong></td>
+                <td><span class="def">Beschrijving</span></td>
                 <td>
                   <div ng-bind-html="event.description" class="event-detail-description"></div>
                 </td>
               </tr>
               <tr>
-                <td><strong>Waar</strong></td>
+                <td><span class="def">Waar</span></td>
                 <td ng-show="event.location.url"><a ui-sref="split.footer.place-preview({id: event.location.id})">{{eventLocation(event)}}</a></td>
                 <td ng-hide="event.location.url">
                   {{event.location.name.nl}},
@@ -96,17 +99,20 @@
                 </td>
               </tr>
               <tr>
-                <td><strong>Wanneer</strong></td>
+                <td><span class="def">Wanneer</span></td>
                 <td>
                   <udb-calendar-summary offer="event" show-opening-hours="true"></udb-calendar-summary>
                 </td>
               </tr>
               <tr ng-class="{muted: !event.organizer}">
-                <td><strong>Organisatie</strong></td>
-                <td>{{event.organizer.name}}</td>
+                <td><span class="def">Organisatie</span></td>
+                <td ng-if="event.organizer">{{event.organizer.name}}</td>
+                <td ng-if="!event.organizer">
+                  Geen organisatie-informatie
+                </td>
               </tr>
               <tr class="rv-event-info-price" ng-class="{muted: !event.priceInfo.length}">
-                <td><strong>Prijs</strong></td>
+                <td><span class="def">Prijs</span></td>
                 <td ng-if="event.priceInfo.length">
                   <table class="table event-detail-price-table">
                     <tr ng-repeat="priceInfo in event.priceInfo">
@@ -131,7 +137,7 @@
             <tbody udb-contact-point-detail="::event.contactPoint"></tbody>
             <tbody>
               <tr>
-                <td><strong>Geschikt voor</strong></td>
+                <td><span class="def">Geschikt voor</span></td>
                 <td>
                   <span ng-if="event.typicalAgeRange">{{event.typicalAgeRange}}</span>
                   <span ng-if="!event.typicalAgeRange">Alle leeftijden</span>
@@ -140,11 +146,9 @@
             </tbody>
             <tbody udb-image-detail="::event.mediaObject" image="::event.image"></tbody>
           </table>
-        </div>
       </div>
 
       <div role="tabpanel" class="tab-pane" ng-show="isTabActive('history')">
-        <h2 class="block-header">Geschiedenis</h2>
         <div class="timeline">
           <dl ng-repeat="eventAction in eventHistory track by $index">
             <dt ng-bind="eventAction.date | date:'dd/MM/yyyy H:mm'"></dt>
@@ -157,16 +161,14 @@
       </div>
 
       <div class="tab-pane" role="tabpanel" ng-show="isTabActive('publication')">
-        <div class="panel panel-default">
-          <table class="table">
-            <colgroup>
-              <col style="width:20%"/>
-              <col style="width:80%"/>
-            </colgroup>
-            <tbody udb-workflow-status="::event">
-            </tbody>
-          </table>
-        </div>
+        <table class="table udb3-data-table">
+          <colgroup>
+            <col style="width:20%"/>
+            <col style="width:80%"/>
+          </colgroup>
+          <tbody udb-workflow-status="::event">
+          </tbody>
+        </table>
       </div>
 
     </div>
