--- a/src/management/moderation/moderation-list.html
+++ b/src/management/moderation/moderation-list.html
@@ -1,6 +1,4 @@
-<div class="page-header">
-    <h1>Valideren</h1>
-</div>
+<h1 class="title">Valideren</h1>
 
 <div ng-show="moderator.loading && !moderator.loadingError">
     <i class="fa fa-circle-o-notch fa-spin"></i>
