III-1425 also clear organizer from cache on cancel

--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -67,7 +67,7 @@
         Bewaren
     </button>
     <a class="btn btn-default organisator-bewerken-annuleren"
-       ui-sref="management.organizers.search">Annuleren</a>
+       ng-click="oec.cancel()">Annuleren</a>
 </div>
 
 <div ng-show="oec.loadingError">
