III-1425 do not change color of label Website on error

--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -20,7 +20,7 @@
 
                 <div class="form-group has-feedback"
                      ng-class="{'has-error' : (oec.organizersWebsiteFound || oec.urlError || oec.organizerEditForm.website.$error.required) && oec.hasErrors }">
-                    <label class="control-label" for="organizer-website">Website</label>
+                    <label>Website</label>
                     <input type="url"
                            id="organizer-website"
                            udb-http-prefix
