--- a/src/event-detail/ui/contact-point-detail.directive.html
+++ b/src/event-detail/ui/contact-point-detail.directive.html
@@ -24,5 +24,5 @@
             </li>
         </ul>
     </td>
-    <td ng-if="::isEmpty(contactPoint)">Geen contactgegevens</td>
+    <td ng-if="::isEmpty(contactPoint)">Geen contactinformatie</td>
 </tr>
