--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -15,7 +15,7 @@
   <p class="text-center"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i><span class="sr-only">Aan het laden...</span></p>
 </div>
 
-<div ng-if="place && finishedLoading">
+<div ng-if="place && finishedLoading" class="page-detail">
   <h1 class="title" ng-bind="place.name"></h1>
 
   <div class="row">
@@ -47,24 +47,27 @@
           </colgroup>
           <tbody>
             <tr>
-              <td><span class="def">Titel</span></td>
-              <td>{{place.name}}</td>
+              <td><span class="row-label">Titel</span></td>
+              <td>{{::place.name}}</td>
             </tr>
             <tr>
-              <td><span class="def">Type</span></td>
-              <td>{{place.type.label}}</td>
+              <td><span class="row-label">Type</span></td>
+              <td>{{::place.type.label}}</td>
             </tr>
-            <tr>
-              <td><span class="def">Beschrijving</span></td>
-              <td>
-                <div ng-bind-html="place.description" class="event-detail-description"></div>
+            <tr ng-class="::{ muted: (isEmpty(place.description) || place.description == null)}">
+              <td><span class="row-label">Beschrijving</span></td>
+              <td ng-if="::(!isEmpty(place.description) && place.description !== null)">
+                <div ng-bind-html="::place.description" class="event-detail-description"></div>
+              </td>
+              <td ng-if="::(isEmpty(place.description) || place.description == null)">
+                Geen beschrijving
               </td>
             </tr>
             <tr>
-              <td><span class="def">Waar</span></td>
-              <td>{{place.address.streetAddress}}<br />
-                {{place.address.postalCode}} {{place.address.addressLocality}}<br />
-                {{place.address.addressCountry}}</td>
+              <td><span class="row-label">Waar</span></td>
+              <td>{{::place.address.streetAddress}}<br />
+                {{::place.address.postalCode}} {{::place.address.addressLocality}}<br />
+                {{::place.address.addressCountry}}</td>
             </tr>
           </tbody>
           <tbody udb-booking-info-detail="::place.bookingInfo"></tbody>
@@ -72,10 +75,10 @@
           <tbody>
             <tr>
               <td>
-                <span class="def">Labels</span>
+                <span class="row-label">Labels</span>
               </td>
               <td>
-                <p><udb-label-select labels="place.labels"
+                <p><udb-label-select labels="::place.labels"
                                   label-added="labelAdded(label)"
                                   label-removed="labelRemoved(label)">
                 </udb-label-select></p>
@@ -91,10 +94,10 @@
               </td>
             </tr>
             <tr>
-              <td><span class="def">Geschikt voor</span></td>
+              <td><span class="row-label">Geschikt voor</span></td>
               <td>
-                <span ng-if="place.typicalAgeRange">{{place.typicalAgeRange}}</span>
-                <span ng-if="!place.typicalAgeRange">Alle leeftijden</span>
+                <span ng-if="::place.typicalAgeRange">{{::place.typicalAgeRange}}</span>
+                <span ng-if="::(!place.typicalAgeRange)">Alle leeftijden</span>
               </td>
             </tr>
           </tbody>
@@ -104,11 +107,11 @@
 
       <div role="tabpanel" class="tab-pane" ng-show="isTabActive('history')">
         <div class="timeline">
-          <dl ng-repeat="placeAction in placeHistory track by $index">
-            <dt ng-bind="placeAction.date | date:'dd / MM / yyyy H:mm'"></dt>
+          <dl ng-repeat="placeAction in ::placeHistory track by $index">
+            <dt ng-bind="::placeAction.date | date:'dd / MM / yyyy H:mm'"></dt>
             <dd>
-              <span class="author" ng-if="placeAction.author">{{placeAction.author}}</span><br ng-if="placeAction.author"/>
-              <span class="description">{{placeAction.description}}</span>
+              <span class="author" ng-if="::placeAction.author">{{::placeAction.author}}</span><br ng-if="::placeAction.author"/>
+              <span class="description">{{::placeAction.description}}</span>
             </dd>
           </dl>
         </div>
