--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -27,7 +27,7 @@
         <button ng-if="::permissions.duplication"
                 class="list-group-item"
                 type="button"
-                ui-sref='duplication.event({id: event.id})'><i class="fa fa-files-o" aria-hidden="true"></i>  Kopiëren en aanpassen</button>
+                ui-sref='duplication.event(::{id: event.id})'><i class="fa fa-files-o" aria-hidden="true"></i>  Kopiëren en aanpassen</button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
@@ -57,9 +57,9 @@
                 <td><span class="row-label">Type</span></td>
                 <td>{{::event.type.label}}</td>
               </tr>
-              <tr ng-if="event.audience.audienceType !== 'everyone'">
+              <tr ng-if="::event.audience.audienceType !== 'everyone'">
                 <td><span class="row-label">Toegang</span></td>
-                <td>{{translateAudience(::event.audience.audienceType)}}
+                <td>{{::translateAudience(event.audience.audienceType)}}
                 <udb-event-cultuurkuur-component event="event" permission="::permissions.editing" ></udb-event-cultuurkuur-component></td>
               </tr>
               <tr>
@@ -95,7 +95,7 @@
               </tr>
               <tr>
                 <td><span class="row-label">Waar</span></td>
-                <td ng-show="::event.location.url"><a ui-sref="split.footer.place-preview({id: event.location.id})">{{eventLocation(event)}}</a></td>
+                <td ng-show="::event.location.url"><a ui-sref="::split.footer.place-preview({id: event.location.id})">{{eventLocation(event)}}</a></td>
                 <td ng-hide="::event.location.url">
                   {{::event.location.name.nl}},
                   {{::event.location.address.streetAddress}},
@@ -116,18 +116,18 @@
                   Geen organisatie-informatie
                 </td>
               </tr>
-              <tr class="rv-event-info-price" ng-class="::{muted:  !event.priceInfo.length}">
+              <tr class="rv-event-info-price" ng-class="::{muted: !event.priceInfo.length}">
                 <td><span class="row-label">Prijs</span></td>
                 <td ng-if="::event.priceInfo.length">
-                  <table class="table event-detail-price-table">
-                    <tr ng-repeat="::priceInfo in ::event.priceInfo">
-                      <td>{{::priceInfo.name}}</td>
+                  <table class="table table-bordered event-detail-price-table">
+                    <tr ng-repeat="priceInfo in ::event.priceInfo">
+                      <td>{{priceInfo.name}}</td>
                       <td>
-                        <span ng-if="::priceInfo.price == 0">
+                        <span ng-if="priceInfo.price == 0">
                           Gratis
                         </span>
                         <span ng-if="::priceInfo.price != 0">
-                          {{::priceInfo.price | currency}} euro
+                          {{priceInfo.price | currency}} euro
                         </span>
                       </td>
                     </tr>
@@ -144,8 +144,8 @@
               <tr>
                 <td><span class="row-label">Geschikt voor</span></td>
                 <td>
-                  <span ng-if="event.typicalAgeRange">{{::event.typicalAgeRange}}</span>
-                  <span ng-if="!event.typicalAgeRange">Alle leeftijden</span>
+                  <span ng-if="::event.typicalAgeRange">{{::event.typicalAgeRange}}</span>
+                  <span ng-if="::(!event.typicalAgeRange)">Alle leeftijden</span>
                 </td>
               </tr>
             </tbody>
@@ -156,10 +156,10 @@
       <div role="tabpanel" class="tab-pane" ng-show="isTabActive('history')">
         <div class="timeline">
           <dl ng-repeat="eventAction in ::eventHistory track by $index">
-            <dt ng-bind="::eventAction.date | date:'dd/MM/yyyy H:mm'"></dt>
+            <dt ng-bind="eventAction.date | date:'dd/MM/yyyy H:mm'"></dt>
             <dd>
-              <span class="author" ng-if="eventAction.author">{{::eventAction.author}}</span><br ng-if="eventAction.author"/>
-              <span class="description">{{::eventAction.description}}</span>
+              <span class="author" ng-if="eventAction.author">{{eventAction.author}}</span><br ng-if="eventAction.author"/>
+              <span class="description">{{eventAction.description}}</span>
             </dd>
           </dl>
         </div>
