--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -28,8 +28,8 @@
                            class="form-control"
                            ng-model-options="{ debounce: 300 }"
                            ng-model="oec.organizer.url"
-                           aria-describedby="organizer-website-status"
                            ng-change="oec.validateWebsite()"
+                           aria-describedby="organizer-website-status"
                            autocomplete="off"
                            required>
                     <span class="fa fa-circle-o-notch fa-spin form-control-feedback" ng-show="oec.showWebsiteValidation" aria-hidden="true"></span>
@@ -57,8 +57,7 @@
                            on-update="oec.validateAddress(address, error)"
                            ng-class="{'has-error' : oec.addressError && oec.hasErrors }"></udb-organizer-address>
     <udb-organizer-contact contact="oec.contact"
-                           on-update="oec.validateContact(contact, error)"
-                           ng-class="{'has-error' : oec.contactError && oec.hasErrors }"></udb-organizer-contact>
+                           on-update="oec.validateContact()"></udb-organizer-contact>
 
     <button type="button"
             class="btn btn-primary organisator-bewerken-bewaren"
