--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -116,19 +116,10 @@
                              typeahead-on-select="selectOrganizer(organizer)"
                              typeahead-min-length="3"
                              typeahead-template-url="templates/organisation-uitpas-typeahead-template.html"
+                             typeahead-popup-template-url="templates/organizer-typeahead-popup-template.html"
                              typeahead-wait-ms="300"
                              focus-if="organizerCssClass == 'state-filling'"
                              udb-auto-scroll/>
-                      <div class="dropdown-menu-no-results text-center" ng-show="emptyOrganizerAutocomplete">
-                        <div class="panel panel-default text-center">
-                          <div class="panel-body">
-                            <p>Organisatie niet gevonden?</p>
-                            <button type='button' class='btn btn-primary' ng-click="openOrganizerModal()">
-                              Nieuwe organisator toevoegen
-                            </button>
-                          </div>
-                        </div>
-                      </div>
                     </span>
                   </div>
                 </div>
