--- a/src/event-detail/ui/booking-info-detail.directive.html
+++ b/src/event-detail/ui/booking-info-detail.directive.html
@@ -2,7 +2,7 @@
     <td>
         <span class="row-label">Reservatie</span>
     </td>
-    <td ng-if="::(!isEmpty(bookingInfo) && (bookingInfo.phone !== null && bookingInfo.email !== null && bookingInfo.url !== null))">
+    <td ng-if="::(!isEmpty(bookingInfo) && (bookingInfo.phone !== null || bookingInfo.email !== null || bookingInfo.url !== null))">
         <ul class="list-unstyled" >
             <li ng-if="::bookingInfo.url">
                     <span>
@@ -10,8 +10,9 @@
                          ng-bind="::bookingInfo.urlLabel"></a>
                     </span>
             </li>
+
             <li ng-if="::bookingInfo.phone" ng-bind="::bookingInfo.phone"></li>
-            <li ng-if="::bookingInfo.email"> <a href="{{'mailto:'+ ::bookingInfo.email}}">{{::bookingInfo.email}}</a></li>
+            <li ng-if="::bookingInfo.email"> <a href="::{{'mailto:'+ bookingInfo.email}}">{{::bookingInfo.email}}</a></li>
             <li ng-if="::bookingInfo.availabilityStarts" > Van {{::bookingInfo.availabilityStarts | date}} tot {{::bookingInfo.availabilityEnds | date}}</li>
         </ul>
     </td>
