III-1425 organizer contact component set error on form submit

--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -14,7 +14,7 @@
                     <span ng-show="oec.organizerEditForm.website.$error.required || oec.urlError">Gelieve een website in te vullen.<br /></span>
                     <span ng-show="oec.organizerEditForm.name.$error.required">Gelieve een naam in te vullen.<br /></span>
                     <span ng-show="oec.addressError">Gelieve een geldig adres in te vullen.<br /></span>
-                    <span ng-show="oec.contactError">Gelieve alle contactinfo in te vullen.<br /></span>
+                    <span ng-show="oec.contactError">Gelieve alle contactinfo correct in te vullen.<br /></span>
                     <span ng-show="oec.saveError">Er ging iets mis tijdens het opslaan.<br /></span>
                 </p>
 
