--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -45,11 +45,19 @@
                 <p><a href ng-click="alterDescription()">Wijzigen</a></p>
 
 -->
-             <textarea ng-blur="saveDescription()" class="form-control" ng-model="description" rows="6" udb-auto-scroll focus-if="descriptionCssClass==state-complete">{{eventFormData.description.nl}}</textarea>
+             <textarea ng-blur="saveDescription()" ng-focus="showInfo = true" class="form-control" ng-model="description" rows="6" udb-auto-scroll focus-if="descriptionCssClass==state-complete">{{eventFormData.description.nl}}</textarea>
+             <p class="tip description-info" ng-if="countCharacters() < 200 && showInfo"> De eerste 200 tekens zijn het belangrijkst om een nieuw publiek aan te spreken. Nog {{200 - countCharacters()}} tekens.
+              <span class="loader"><span class="empty"></span><span class="bar" ng-style="{width : (countCharacters()/2)+'%'}" ></span></span>
+             </p>
+             <p class="tip description-info" ng-if="countCharacters() >= 200 && showInfo">Plaats de belangrijkste boodschap in de eerste 200 tekens. Je kan nog verder aanvullen met achtergrondinformatie.</p>
               </section>
               <section class="state filling">
                 <div class="form-group">
-                  <textarea ng-blur="saveDescription()" class="form-control" ng-model="description" rows="6" udb-auto-scroll focus-if="descriptionCssClass == 'state-filling'">{{}}</textarea>
+                  <textarea ng-blur="saveDescription()" ng-focus="showInfo = true" class="form-control" ng-model="description" rows="6" udb-auto-scroll focus-if="descriptionCssClass == 'state-filling'">{{}}</textarea>
+                    <p class="tip description-info" ng-if="countCharacters() < 200 && showInfo"> De eerste 200 tekens zijn het belangrijkst om een nieuw publiek aan te spreken. Nog {{200 - countCharacters()}} tekens.
+              <span class="loader"><span class="empty"></span><span class="bar" ng-style="{width : (countCharacters()/2)+'%'}" ></span></span>
+             </p>
+             <p class="tip description-info" ng-if="countCharacters() >= 200 && showInfo">Plaats de belangrijkste boodschap in de eerste 200 tekens. Je kan nog verder aanvullen met achtergrondinformatie.</p>
                   <div class="tip" ng-switch="eventFormData.eventType">
                     <p ng-switch-when="0.17.0.0.0">
                       Geef hier een wervende omschrijving van de route. Vermeld in deze tekst <strong>hoe</strong>
