III-2146 place-detail

--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -15,7 +15,7 @@
   <p class="text-center"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i><span class="sr-only">Aan het laden...</span></p>
 </div>
 
-<div ng-if="place && finishedLoading" class="page-detail">
+<div ng-if="place && finishedLoading" class="place-detail">
   <h1 class="title" ng-bind="::place.name"></h1>
 
   <div class="row">
