--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -42,13 +42,13 @@
               <section class="state complete filling">
                 <div class="form-group">
                   <textarea ng-blur="saveDescription()"
-                            ng-focus="showInfo = true"
+                            ng-focus="descriptionInfoVisible = true"
                             class="form-control"
                             ng-model="description"
                             rows="6"
                             udb-auto-scroll
                             focus-if="descriptionCssClass == 'state-filling'"></textarea>
-                  <p class="tip description-info" ng-if="countCharacters() < 200 && showInfo">
+                  <p class="tip description-info" ng-if="descriptionInfoVisible && countCharacters() < 200">
                     De eerste 200 tekens zijn het belangrijkst om een nieuw publiek aan te spreken.
                     Nog <span ng-bind="(200 - countCharacters())"></span> tekens.
                     <span class="loader">
@@ -56,7 +56,7 @@
                       <span class="bar" ng-style="{width : (countCharacters()/2)+'%'}" ></span>
                     </span>
                   </p>
-                  <p class="tip description-info" ng-if="countCharacters() >= 200 && showInfo">
+                  <p class="tip description-info" ng-if="descriptionInfoVisible && countCharacters() >= 200">
                     Plaats de belangrijkste boodschap in de eerste 200 tekens. Je kan nog verder aanvullen met achtergrondinformatie.
                   </p>
                   <div class="tip" ng-switch="eventFormData.type.id">
