--- a/src/event_form/steps/event-form-publish.html
+++ b/src/event_form/steps/event-form-publish.html
@@ -6,7 +6,7 @@
       <button type="submit"
               class="btn btn-success"
               ng-click="efpc.publish()"
-              ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus)">Meteen publiceren</button>
+              ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.hasNoDefault">Meteen publiceren</button>
       <button class="btn btn-success"
               ng-click="efpc.publishLater()"
               ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.hasNoDefault">Later publiceren</button>
@@ -14,6 +14,10 @@
               class="btn btn-success"
               ng-click="efpc.preview()"
               ng-if="!efpc.isDraft(efpc.eventFormData.workflowStatus)">Klaar met bewerken</button>
+      <button type="submit"
+              class="btn btn-success"
+              ng-click="efpc.publish()"
+              ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && !efpc.hasNoDefault">Klaar met bewerken</button>
       <span ng-if="efpc.hasNoDefault && efpc.eventFormData.availableFrom !== ''" && !efpc.isDraft(efpc.eventFormData.workflowStatus)>
           Online vanaf <span ng-bind="efpc.eventFormData.availableFrom | date: 'dd/MM/yyyy'"></span>
       </span>
