--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -126,6 +126,17 @@
                              typeahead-wait-ms="300"
                              focus-if="organizerCssClass == 'state-filling'"
                              udb-auto-scroll/>
+                             <div class="dropdown-menu-no-results"
+                             ng-show="emptyOrganizerAutocomplete && organizer">
+                                <div class="panel panel-default text-center">
+                                    <div class="panel-body">
+                                        <p>Organisatie niet gevonden?</p>
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" ng-click="openOrganizerModal()">
+                                            Nieuwe organisatie toevoegen
+                                        </button>
+                                    </div>
+                                </div>
+                      </div>
                     </span>
                   </div>
                 </div>
