--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -114,20 +114,24 @@
                   <label>
                     Kies een organisatie <i class="fa fa-circle-o-notch fa-spin" ng-show="loadingOrganizers"></i>
                   </label>
-                  <div id="organisator-kiezer">
-                    <span class="twitter-typeahead" style="position: relative; display: inline-block; direction: ltr;">
-                      <input type="text" class="form-control uib-typeahead" id="organisator-autocomplete"
-                             ng-model="organizer"
-                             uib-typeahead="organizer for organizer in getOrganizers($viewValue)"
-                             typeahead-on-select="selectOrganizer(organizer)"
-                             typeahead-min-length="3"
-                             typeahead-template-url="templates/organisation-uitpas-typeahead-template.html"
-                             typeahead-popup-template-url="templates/organizer-typeahead-popup-template.html"
-                             typeahead-wait-ms="300"
-                             focus-if="organizerCssClass == 'state-filling'"
-                             udb-auto-scroll/>
-                             <div class="dropdown-menu-no-results"
-                             ng-show="emptyOrganizerAutocomplete && organizer">
+                  <div id="organisator-kiezer" class="typeahead">
+                    <input type="text" class="form-control uib-typeahead" id="organisator-autocomplete"
+                           ng-change="organizerSearched()"
+                           ng-focus="organizerFocus=true"
+                           ng-blur="organizerFocus=false"
+                           ng-model="organizer"
+                           placeholder="Naam"
+                           uib-typeahead="organizer for organizer in getOrganizers($viewValue)"
+                           typeahead-on-select="selectOrganizer(organizer)"
+                           typeahead-min-length="3"
+                           typeahead-template-url="templates/organisation-uitpas-typeahead-template.html"
+                           typeahead-popup-template-url="templates/organizer-suggestion-popup.html"
+                           typeahead-wait-ms="300"
+                           focus-if="organizerCssClass == 'state-filling'"
+                           udb-auto-scroll/>
+                           <div class="dropdown-menu-no-results open"
+                           ng-show="organizerFocus && organizersSearched && emptyOrganizerAutocomplete">
+                             <div class="dropdown-menu">
                                 <div class="panel panel-default text-center">
                                     <div class="panel-body">
                                         <p>Organisatie niet gevonden?</p>
@@ -135,9 +139,9 @@
                                             Nieuwe organisatie toevoegen
                                         </button>
                                     </div>
-                                </div>
-                      </div>
-                    </span>
+                                  </div>
+                              </div>
+                            </div>
                   </div>
                 </div>
               </section>
