--- a/src/event_form/steps/event-form-publish.html
+++ b/src/event_form/steps/event-form-publish.html
@@ -7,7 +7,7 @@
               class="btn btn-success"
               ng-click="efpc.publish()"
               ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.hasNoDefault">Meteen publiceren</button>
-      <button class="btn "
+      <button class="btn btn-default"
               ng-click="efpc.publishLater()"
               ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.hasNoDefault">Later publiceren</button>
       <button type="submit"
