III-2228 don't make a save call to the backend when there aren't changes in the description-field

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -42,7 +42,7 @@
               <section class="state complete filling">
                 <div class="form-group">
                   <textarea ng-blur="saveDescription()"
-                            ng-focus="descriptionInfoVisible = true"
+                            ng-focus="focusDescription()"
                             class="form-control"
                             ng-model="description"
                             rows="6"
