--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -26,6 +26,9 @@
           <div class="extra-task" ng-class="descriptionCssClass">
             <div class="col-sm-3">
               <em class="extra-task-label">Beschrijving</em>
+              <a ng-if="description" class="btn btn-link to-filling" ng-click="saveDescription(true)">
+                 Leegmaken
+              </a>
               <span> </span>
               <i class="fa fa-circle-o-notch fa-spin" ng-show="savingDescription"></i>
             </div>
@@ -48,6 +51,7 @@
                             rows="6"
                             udb-auto-scroll
                             focus-if="descriptionCssClass == 'state-filling'"></textarea>
+
                   <p class="tip description-info" ng-if="descriptionInfoVisible && countCharacters() < 200">
                     De eerste 200 tekens zijn het belangrijkst om een nieuw publiek aan te spreken.
                     Nog <span ng-bind="(200 - countCharacters())"></span> tekens.
